Solve contrast issues

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@ body {
   font-family: "Open Sans Condensed", sans-serif !important;
 }
 
-h1,
 h2,
 h3,
 h4 {
